--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
+// kapt 사용
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -29,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    // 뷰 바인딩
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -40,4 +46,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Room - 안드로이드의 내장 데이터베이스
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
+    implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    kapt 'org.xerial:sqlite-jdbc:3.36.0'
+
+    //viewModel - 엑티비티간 데이터 유지 및 공유
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 }
